--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,3 +16,5 @@ jobs:
       with:
         source: "tests/a.txt,tests/b.txt"
         target: "/home/actions/test"
+        timeout: 30s
+        command_timeout: 30s
