chore: checkout source code.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+    - uses: actions/checkout@master
     - name: copy file via ssh password
       uses: appleboy/scp-action@master
       env:
