chore: add default timeout

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,4 @@ jobs:
         PORT: ${{ secrets.PORT }}
       with:
         source: "tests/a.txt,tests/b.txt"
-        target: "/home/deploy/test"
-        timeout: 30s
-        command_timeout: 30s
+        target: "test"
