--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,8 @@ inputs:
     description: 'scp file list'
   rm:
     description: 'remove target folder before upload data'
+  strip_components:
+    description: 'remove the specified number of leading path elements'
 runs:
   using: 'docker'
   image: 'Dockerfile'
