chore(scp): default port is 22
Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/action.yml
+++ b/action.yml
@@ -6,6 +6,7 @@ inputs:
     description: 'scp remote host'
   port:
     description: 'scp remote port'
+    default: 22
   username:
     description: 'scp username'
   password:
