--- a/action.yml
+++ b/action.yml
@@ -37,6 +37,24 @@ inputs:
     default: false
   tar_tmp_path:
     description: 'temporary path for tar file on the dest host'
+  proxy_host:
+    description: 'ssh proxy remote host'
+  proxy_port:
+    description: 'ssh proxy remote port'
+    default: 22
+  proxy_username:
+    description: 'ssh proxy username'
+  proxy_password:
+    description: 'ssh proxy password'
+  proxy_passphrase:
+    description: 'ssh proxy key passphrase'
+  proxy_timeout:
+    description: 'timeout for ssh to proxy host'
+    default: "30s"
+  proxy_key:
+    description: 'content of ssh proxy private key. ex raw content of ~/.ssh/id_rsa'
+  proxy_key_path:
+    description: 'path of ssh proxy private key'
 runs:
   using: 'docker'
   image: 'Dockerfile'
