--- a/action.yml
+++ b/action.yml
@@ -23,6 +23,8 @@ inputs:
     description: 'path of ssh private key'
   passphrase:
     description: 'ssh key passphrase'
+  fingerprint:
+    description: 'fingerprint SHA256 of the host public key, default is to skip verification'
   target:
     description: 'target path on the server'
   source:
@@ -59,6 +61,8 @@ inputs:
     description: 'content of ssh proxy private key. ex raw content of ~/.ssh/id_rsa'
   proxy_key_path:
     description: 'path of ssh proxy private key'
+  proxy_fingerprint:
+    description: 'fingerprint SHA256 of the host public key, default is to skip verification'
 runs:
   using: 'docker'
   image: 'Dockerfile'
