feat: add new input for tar executable path
- Add new input `tar_exec` with description and default value

Signed-off-by: Bo-Yi.Wu <appleboy.tw@gmail.com>

--- a/action.yml
+++ b/action.yml
@@ -46,6 +46,9 @@ inputs:
     default: false
   tar_tmp_path:
     description: 'temporary path for tar file on the dest host'
+  tar_exec:
+    description: 'temporary path for tar file on the dest host'
+    default: 'tar'
   proxy_host:
     description: 'ssh proxy remote host'
   proxy_port:
