--- a/action.yml
+++ b/action.yml
@@ -42,7 +42,10 @@ inputs:
     description: 'remove the specified number of leading path elements'
     default: 0
   overwrite:
-    description: 'use `--overwrite` flag with tar'
+    description: 'use --overwrite flag with tar'
+    default: false
+  tar_dereference:
+    description: 'use --dereference flag with tar'
     default: false
   tar_tmp_path:
     description: 'temporary path for tar file on the dest host'
