docs: update target and source fields in README and action.yml descriptions
- Change in README.md: Updated required fields for `target` and `source`
- Change in action.yml: Updated description for `target` input field

Signed-off-by: Bo-Yi.Wu <appleboy.tw@gmail.com>

--- a/action.yml
+++ b/action.yml
@@ -29,7 +29,7 @@ inputs:
     description: 'include more ciphers with use_insecure_cipher'
     default: false
   target:
-    description: 'target path on the server'
+    description: 'target path on the server, must be a directory path.'
   source:
     description: 'scp file list'
   rm:
