--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,7 +134,7 @@ jobs:
         done
 
     - name: copy file to server
-      uses: ./
+      uses: appleboy/scp-action@7af00892de6f8397c5c3393cfb3b32ae7f91b94b
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
