feat: refactor deployment workflows and update base image in Dockerfile
- Rename a workflow job from `deploy artifact` to `test deploy artifact`
- Add a new workflow job for copying files to a server
- Update the base image in Dockerfile to `ghcr.io/appleboy/drone-scp:latest`

Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,7 +86,7 @@ jobs:
         target: "test"
 
   deploy:
-    name: deploy artifact
+    name: test deploy artifact
     runs-on: ubuntu-latest
     steps:
     - name: checkout
@@ -137,3 +137,20 @@ jobs:
         port: ${{ secrets.PORT }}
         source: ${{ steps.changed-files.outputs.all_changed_files }}
         target: test
+
+  target:
+    name: test target folder
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout
+      uses: actions/checkout@v3
+
+    - name: copy file to server
+      uses: ./
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.KEY }}
+        port: ${{ secrets.PORT }}
+        source: tests/a.txt,tests/b.txt
+        target: test foobar
