feat(actions): improve API robustness and testing coverage
- Add `protocol` input with description and default value `tcp`

Signed-off-by: appleboy <appleboy.tw@gmail.com>

--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,9 @@ inputs:
     description: "scp username"
   password:
     description: "scp password"
+  protocol:
+    description: "The IP protocol to use. Valid values are 'tcp'. 'tcp4' or 'tcp6'. Default to tcp."
+    default: "tcp"
   timeout:
     description: "timeout for ssh to remote host"
     default: "30s"
